gel/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: gel
spec:
  type: ClusterIP
  selector:
    name: gateway
  ports:
    - name: gateway-http
      port: 3100
      targetPort: http
